--- a/index.html
+++ b/index.html
@@ -17,7 +17,7 @@
     </div>
   </header>
   <main class="bg-green-100 h-full">
-    <div class="text-xl text-center mx-auto container pt-6">
+    <div class="text-xl text-center mx-auto px-4 container pt-6">
       <h2 class="text-3xl font-bold">Первый займ под 0%</h2>
       <p class="">до 200 000 руб. повторным клиентам</p>
       <p>Займ на любые цели за 5 минут по паспорту</p>
@@ -26,7 +26,7 @@
     <div class="mx-auto container py-5 px-4">
       <p class="text-3xl font-bold">Берите сейчас</p>
       <p class="text-xl">Одобряем 93 заявки из 100</p>
-      <div class="grid grid-cols-[150px,1fr] pt-5">
+      <div class="grid grid-cols-[150px,1fr] pt-5 pb-2">
         <span class="text-sm border rounded-l px-4 py-2 bg-green-300 whitespace-no-wrap">Мне нужно: руб.</span>
         <input name="field_name" class="border rounded-r px-4 py-2 w-full" type="text" placeholder="20000" />
       </div>
@@ -37,7 +37,7 @@
       <div class="flex justify-end pt-5">
         <button class="p-2 pl-5 pr-5 bg-transparent border-2 border-blue-500 text-blue-500 text-lg rounded-lg hover:bg-blue-500 hover:text-gray-100 focus:border-4 focus:border-blue-300">Получить деньги</button>
       </div>
-      <div>
+      <div class="pt-4">
         <p class="text-xl font-semibold pb-3">Следующие данные носят информационный характер</p>
         <ul>
           <li>Вы берете: <span class="font-semibold">20000</span> руб.</li>
@@ -252,7 +252,7 @@
         </div>
       </div>
   </section>
-  <div class="mx-auto container px-4">
+  <div class="mx-auto container px-4 pb-5">
     <h2 class="text-4xl font-bold">Это нужно знать заемщикам</h2>
     <div class="py-5">
       <p class="text-3xl font-semibold ">Условия выдачи займа</p>
@@ -286,9 +286,9 @@
         </li>
       </ul>
       <ul class="font-semibold py-5">
-        <li><a href="#">Политика обработки персональных данных</a></li>
-        <li><a href="#">Публичный договор-оферта</a></li>
-        <li><a href="#">Cогласие на обработку персональных данных</a></li>
+        <li><a href="/politika.pdf">Политика обработки персональных данных</a></li>
+        <li><a href="/dogovor.pdf">Публичный договор-оферта</a></li>
+        <li><a href="/soglasie.pdf">Cогласие на обработку персональных данных</a></li>
       </ul>
     </div>
     <div class="mx-auto container px-4 grid gap-y-4 text-xs">
